--- a/configs/apiserver.toml
+++ b/configs/apiserver.toml
@@ -2,4 +2,4 @@ bind_addr = ":8080"
 log_level = "debug"
 
 [store]
-database_url = "user=postgres password=qwerty host=db port=5432 dbname=avitotest sslmode=disable"
+database_url = "user=postgres password=postgres host=db port=5432 dbname=postgres sslmode=disable"
